fix video player in rlt mode
mediawiki rewrites css float: left/right and right: 0/left: 0 css
properties. setting this in javascript will fix the player in rtl
wikis.

Open Issues:
 - menus (source select, subtitles) dont open
 - views in the options manel: share, download, embed still look broken
 - volume control display is the opposite of its use

--- a/MwEmbedModules/EmbedPlayer/resources/skins/kskin/PlayerSkinKskin.css
+++ b/MwEmbedModules/EmbedPlayer/resources/skins/kskin/PlayerSkinKskin.css
@@ -190,7 +190,6 @@
 	margin-top: -2px;
 	margin-right: 0px;
 	width: 50px;
-	float: right;
 	background: none repeat scroll 0 0 transparent !important;
 	font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
 	font-size: 11px;
